# TransactionDatasetAnalysis

./: .gitignore  README.md  data_preprocessing.py  lint.sh  pyproject.toml
.github/workflows/: ci.yml
_old/: eda.py  main.py  utils.py
dataset/: cleanup.ipynb
notebooks/: 01-preprocessing-mcc.ipynb  01-preprocessing-transactions.ipynb  01-preprocessing-users.ipynb  02-cleanup-users.ipynb
src/: eda.py  main.py  utils.py
src/db_transaction_analysis/: eda.py  main.py
src/transaction_analysis/: data_preprocessing.py  main.py  paths.py
src/transaction_analysis/cli/: data.py
src/transaction_analysis/data/: bootstrap.py  cleanup.py  io.py  preprocess.py
