[project]
name = "transaction_dataset_analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "kagglehub>=1.0.0",
    "matplotlib>=3.10.8",
    "pandas>=3.0.2",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "pip>=26.0.1",
    "ruff>=0.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/transaction_analysis"]

[tool.ruff]
target-version = "py314"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
